--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       <ul class="inline-flex -space-x-px text-sm">
         <li>
           <button (click)="goToPreviousPage()"
-            class="jaydev-button">Previous</button>
+            class="flex items-center justify-center px-3 h-8 leading-tight text-gray-500 bg-white border border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Previous</button>
         </li>
         <li *ngFor="let page of getPaginationArray()">
           <button (click)="selectPageNumber(page)"
