--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <div class="p-4 w-full">
     <input [(ngModel)]="searchQuery" (keydown)="searchProducts()"
-      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none rounded-lg focus:shadow-outline"
+      class="shadow appearance-none border w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none rounded-lg focus:shadow-outline"
       id="searchProduct" type="text" placeholder="Search Product">
   </div>
 
