--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,7 +81,7 @@
             <td class="px-6 py-4 text-center font-semibold text-gray-900 dark:text-white">
               {{item?.brand}}
             </td>
-            <td class="px-6 py-4 text-center font-semibold text-gray-900 dark:text-white">
+            <td class="px-6 py-4 text-center font-semibold text-gray-900 dark:text-white capitalize">
               {{item?.category}}
             </td>
             <td class="px-6 py-4 text-center font-semibold text-gray-900 dark:text-white">
@@ -90,10 +90,10 @@
           </tr>
         </tbody>
       </ng-container>
-      <ng-container *ngIf="getAllProductsList.length === 0">
-        <div class="text-xs text-gray-700 uppercase">item not found</div>
-      </ng-container>
     </table>
+    <ng-container *ngIf="getAllProductsList.length === 0">
+      <div class="px-6 py-4 text-center text-gray-700 dark:text-white uppercase">item not found</div>
+    </ng-container>
   </div>
 
 </main>
