--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,11 +28,11 @@
 }
 
 .table-main {
-    @apply text-sm rtl:text-right text-gray-500 dark:text-gray-400
+    @apply text-sm rtl:text-right text-gray-500 dark:text-gray-400;
 }
 
 .table-head {
-    @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400
+    @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
 }
 
 .table-row {
@@ -40,9 +40,9 @@
 }
 
 .pagination-main {
-    @apply p-4 full-width-100 flex justify-center gap-x-4
+    @apply p-4 full-width-100 flex justify-center gap-x-4;
 }
 
 .product-image {
-    @apply w-16 md:w-32 max-w-full max-h-full
+    @apply w-16 md:w-32 max-w-full max-h-full;
 }
