--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,94 +1,1 @@
-<main>
-
-  <div class="full-width-100 p-4 ">
-    <input [(ngModel)]="searchQueryText" #searchInput class="search-input-box full-width-100"
-      id="searchProduct" type="text" placeholder="Search Product">
-  </div>
-
-  <div class="pagination-main">
-    <nav aria-label="Page navigation example">
-      <ul class="inline-flex -space-x-px text-sm">
-        <li>
-          <button (click)="goToPreviousPage()" [disabled]="currentPage <= 1"
-            class="rounded-s-lg pagination-buttons">Previous</button>
-        </li>
-        <li *ngFor="let page of getPaginationArray()">
-          <button (click)="selectPageNumber(page)" class="pagination-buttons">{{
-            page }}</button>
-        </li>
-        <li>
-          <button (click)="goToNextPage()" [disabled]="currentPage >= 100 / selectedItem"
-            class="rounded-e-lg pagination-buttons">Next</button>
-        </li>
-      </ul>
-    </nav>
-    <div>
-      <select id="pageitems" class=" rounded-lg pagination-buttons" [(ngModel)]="selectedItem"
-        (change)="setPagePerLimit()">
-        <option *ngFor="let item of pagePerItems" [value]="item">{{ item }}</option>
-      </select>
-    </div>
-  </div>
-
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <table class="full-width-100 table-main">
-      <thead class="table-head">
-        <tr>
-          <th scope="col" class="table-headings">Sr. No</th>
-          <th scope="col" class="image-column table-headings">Image</th>
-          <th scope="col" class="table-headings">title</th>
-          <th scope="col" class="table-headings">price</th>
-          <th scope="col" class="table-headings">discountPercentage</th>
-          <th scope="col" class="table-headings">rating</th>
-          <th scope="col" class="table-headings">stock</th>
-          <th scope="col" class="table-headings">brand</th>
-          <th scope="col" class="table-headings">category</th>
-          <th scope="col" class="table-headings">description</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <ng-container *ngFor="let item of getAllProductsList;let index = index;">
-          <tr class="table-row">
-            <td class="table-data">
-              {{index + 1}}
-            </td>
-            <td class="p-4">
-              <img [src]="item?.thumbnail" class="product-image">
-            </td>
-
-            <td class="table-data">
-              {{item?.title}}
-            </td>
-
-            <td class="table-data">
-              {{item?.price | currency:'USD'}}
-            </td>
-            <td class="table-data">
-              {{item?.discountPercentage | percent}}
-            </td>
-            <td class="table-data">
-              {{item?.rating}}
-            </td>
-            <td class="table-data">
-              {{item?.stock}}
-            </td>
-            <td class="table-data">
-              {{item?.brand}}
-            </td>
-            <td class="table-data capitalize">
-              {{item?.category}}
-            </td>
-            <td class="table-data">
-              {{item?.description}}
-            </td>
-          </tr>
-        </ng-container>
-      </tbody>
-    </table>
-    <ng-container *ngIf="getAllProductsList.length === 0">
-      <div class="table-data capitalize">item not found</div>
-    </ng-container>
-  </div>
-
-</main>
+<router-outlet></router-outlet>
